# kibits

./: .gitmodules  CMakeLists.txt  LICENSE  README.org  bootstrap.bat  bootstrap.sh  clean.bat  clean.sh
proto/: CMakeLists.txt
proto/kibits/: blockchain.proto  key.proto
src/: CMakeLists.txt
src/kibits/: CMakeLists.txt  kibits.cpp  kibits.h
src/kibits_tests/: CMakeLists.txt  key_generation.cpp
src/tests/: CMakeLists.txt
